Fix gap in cloud config

--- a/css/style.css
+++ b/css/style.css
@@ -129,6 +129,10 @@ form {
 	row-gap: 32px;
 }
 
+.grid3.v-none {
+	row-gap: 0px;
+}
+
 .grid4 {
 	display: grid;
 	grid-template-columns: repeat(4, 1fr);
@@ -448,9 +452,9 @@ footer a:hover {
 	color: #fff;
 }
 
-/* INPUT RANGE - copied the base from a Linode product page because ranges are annoying */
+/* INPUT RANGE */
 
-input {
+input[type="range"] {
 	background-color: #0F3460;
 }
 
@@ -463,7 +467,7 @@ input[type="range"]::-moz-range-progress {
 }
 
 input[type="range"]::-moz-range-thumb {
-	background: #E94560;
+	background-color: #E94560;
 	border: 7px solid #fff;
 	border-radius: 12px;
 	box-sizing: border-box;
@@ -473,7 +477,7 @@ input[type="range"]::-moz-range-thumb {
 }
 
 input[type="range"]::-moz-range-track {
-	background: #fff;
+	background-color: #fff;
 	border: 0px solid rgba(0,0,0,0);
 	border-radius: 4px;
 	box-sizing: border-box;
